# packaging-hello-world

./: .gitignore  README.md  pyproject.toml
pbr/: README.md  pyproject.toml  setup.cfg  setup.py
setuptools/: README.md  pyproject.toml
setuptools/src/hello_world/: main.py
