[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "pbr-hello-world"
version = "0.1.0"
description = "A package to test pbr"
authors = [{name = "Stephen Finucane", email = "stephen@that.guru"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Private :: Do Not Upload",
]

[project.scripts]
hello-world = "hello_world.main:main"

[tool.setuptools.packages.find]
where = ["src"]
